@@ -3,4 +3,4 @@
 # All rights reserved
 
 cd /MCserver
-java -Xmx4G -Xms1024M -jar ./MCserver.jar nogui
+java -Xmx4G -Xms1024M -Xmn1G -XX:PermSize=512m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -jar ./MCserver.jar nogui
